--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </div>
         <div class="caption-box">
             <h1>John Cowen Landscape Associates Ltd.</h1>
-            <p>Whatever the scale of the project, JCLA is committed to designing, implementing, and maintaining high-quality landscape schemes which meet our client’s aspirations and needs.</p>
+            <p>Whatever the scale of the project, JCLA is committed to designing, implementing and maintaining high-quality landscape schemes which meet our client’s aspirations and needs.</p>
         </div>
         <div class="ldb">
             <div class="ldb-part">
