--- a/index.html
+++ b/index.html
@@ -76,37 +76,37 @@
         <script src="/flickity.pkgd.min.js"></script>
         <div class="main-carousel" data-flickity='{ "autoPlay": "2000", "wrapAround": true }' aria-label="carousel">
             <div class="carousel-cell">
-                <a href="/pages/categories/cottages.html" alt="Go to Cottages">
+                <a id="no-hover" href="/pages/categories/cottages.html" alt="Go to Cottages">
                     <img src="Images/NewPhotos/COTTAGE/Cottages0.jpeg" alt="">
                 </a>
             </div>
-            <div class="carousel-cell">
+            <div id="no-hover" class="carousel-cell">
                 <a href="/pages/categories/estates.html" alt="Go to Estates">
                     <img src="Images/NewPhotos/ESTATES/Estates0.jpg" alt="">
                 </a>
             </div>
             <div class="carousel-cell">
-                <a href="pages/categories/plantings.html" alt="Go to Plantings">
+                <a id="no-hover" href="pages/categories/plantings.html" alt="Go to Plantings">
                     <img src="Images/NewPhotos/GARDEN/Garden0.jpg" alt="">
                 </a>
             </div>
             <div class="carousel-cell">
-                <a href="/pages/categories/pools.html" alt="Go to Pool Gardens">
+                <a id="no-hover" href="/pages/categories/pools.html" alt="Go to Pool Gardens">
                     <img src="Images/NewPhotos/PLANTING/Planting2.jpeg" alt="">
                 </a>
             </div>
             <div class="carousel-cell">
-                <a href="/pages/categories/specialty.html" alt="Go to Specialty">
+                <a id="no-hover" href="/pages/categories/specialty.html" alt="Go to Specialty">
                     <img src="Images/PrevPhotos/Specialty/Specialty5.jpg" alt="">
                 </a>
             </div>
             <div class="carousel-cell">
-                <a href="/pages/categories/singlefamily.html" alt="Go to Single Family">
+                <a id="no-hover" href="/pages/categories/singlefamily.html" alt="Go to Single Family">
                     <img src="Images/PrevPhotos/SingleFamily/SingleFamily8.jpg" alt="">
                 </a>
             </div>
             <div class="carousel-cell">
-                <a href="/pages/categories/waterfront.html" alt="Go to Waterfront">
+                <a id="no-hover" href="/pages/categories/waterfront.html" alt="Go to Waterfront">
                     <img src="Images/PrevPhotos/Home/Waterfront.jpg" alt="">
                 </a>
             </div>
@@ -122,8 +122,8 @@
                 <p>We pride ourselves on our extensive landscape knowledge, experience and ability to carry out projects of all kinds.</p>
             </div>
             <div class="ldb-part">
-                <h3>Design</h3>
-                <img src="/Images/Design1.jpg" alt="">
+                <h3><a id="no-hover" href="/pages/categories/design.html" alt="">Design</a></h3>
+                <a id="no-hover" href="/pages/categories/design.html" alt=""><img src="/Images/Design1.jpg" alt=""></a>
                 <p>Our philosophy: synthesize the ‘genius of the place’, with your requirements, and produce a design that suits those objectives.</p>
             </div>
             <div class="ldb-part">
